<resources>
    <string name="app_name">RodOfRoll</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Contraseña</string>
    <string name="Password2">Confirmar contraseña</string>
    <string name="Registrarse">Registrarse</string>

    <string-array name="roles">
        <item>Master</item>
        <item>Jugador</item>
    </string-array>

    <string-array name="dados_array">
        <item>D4</item>
        <item>D6</item>
        <item>D8</item>
        <item>D10</item>
        <item>D12</item>
        <item>D20</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="aceptar">Aceptar</string>
    <string name="nombre_combate">Nombre Combate</string>
    <string name="Nombre">Nombre</string>
    <string name="hacer_foto">Hacer foto</string>
    <string name="abrir_galer_a">Abrir galería</string>
    <string name="borrar_foto">Borrar foto</string>
    <string name="Apodo">Apodo</string>
    <string name="Raza">Raza</string>
    <string name="clase">Clase</string>
    <string name="descripcion">Descripcion</string>
    <string name="no_esta_en_un_combate">No esta en un combate</string>
    <string name="cancelar">Cancelar</string>
    <string name="serviciofin">Es un servicio que borra datos propios de RodOfRoll cuando sales de la aplicacion</string>
    <string name="experiecia">Experiecia</string>
    <string name="no_tienes_notificaciones">No tienes notificaciones</string>
</resources>
